src/styles/site.scss
// Site specific stylesheet
#root {
	height: 100%;
	width: 100%;
}

main {
	max-width: 1200px;
	width: 75%;
	margin: 0 auto;
	flex: 1;
}

section {
	margin-top: 3rem;

	&:first-child {
		margin-top: 0;
	}
}

header {
	margin-bottom: 4rem;
}

ul {
	margin: 0.85rem 0;
}

